--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music_new",
+  "name": "music_admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.21"
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.11",
+    "md5": "^2.2.1",
+    "qs": "^6.6.0",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
@@ -17,6 +23,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
